--- a/Проект/CWA.html
+++ b/Проект/CWA.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Автор</title>
+	<title>Связь с автором</title>
 	<link rel="stylesheet" type="text/css" href="style/CWA.css">
+ <style>
+   h2 {
+    font-family: Bromod;
+   }
+   h1 {
+   	font-family: Tester;
+   }
+  </style>
 </head>
 <body>
 <div class="header-wrap">
 	<div class="logo">
-		<h2>Связь с автором"</h2>
+		<h2>Связь с автором</h2>
     </div>	
 <div class="category-wrap">
   <h3>Категории</h3>
   <ul>
     <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\index.html">Главная Страница</a></li>
     <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Avtor.html">Об авторе</a></li>
+    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Update.html">Обновления</a></li>
   </ul>
 </div>
 </div>
