--- a/Проект/Update.html
+++ b/Проект/Update.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Автор</title>
-	<link rel="stylesheet" type="text/css" href="style/Avtor.css">
+	<title>Обовления</title>
+	<link rel="stylesheet" type="text/css" href="style/CWA.css">
  <style>
    h2 {
     font-family: Bromod;
@@ -10,30 +10,32 @@
    h1 {
    	font-family: Tester;
    }
+   th {
+    font-family: Tester;
+   }
+   td {
+    font-family: Tester;
+   }
   </style>
 </head>
 <body>
 <div class="header-wrap">
 	<div class="logo">
-		<h2>Об Авторе</h2>
-    </div>	
-<div class="category-wrap">
-  <h3>Категории</h3>
-  <ul>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\index.html">Главная Страница	</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\CWA.html">Свзязь с автором</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Update.html">Обновления</a></li>
-  </ul>
-</div>
+		<h2>Обновлеия</h2>
+    </div>
 </div>
 
-</div>
-	<main>	
-		<h1>Автор</h1>
-			<p>Человек.</p>
-	<div class="photo photo1">
-	<img src="img/img101.jpg">
-	</div>
+  <table border="1" width="100%" cellpadding="5">
+   <tr>
+    <th>Обновлеия</th>
+    <th>Обновлеия</th>
+   </tr>
+   <tr>
+    <td>29.03.21</td>
+    <th>31.03.21</th>
+  </tr>
+ </table>
+
 	 <footer>
   <nav>
    <section>
@@ -55,6 +57,14 @@
   <p><a href="https://vk.com/vladislavlysyh"><img src="img/vk.png" width="45" 
   height="50"></a></p>
 			</div>
+<div class="category-wrap">
+  <h3>Категории</h3>
+  <ul>
+    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\index.html">Главная Страница</a></li>
+    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Avtor.html">Об авторе</a></li>
+    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\CWA.html">Связь с автором</a></li>
+  </ul>
+</div>
 </main>
 </body>
 </html>
