--- a/Проект/index.html
+++ b/Проект/index.html
@@ -3,16 +3,22 @@
 <head>
 	<title>История Windows</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-
+ <style>
+   h2 {
+    font-family: Bromod;
+   }
+   h1 {
+   	font-family: Tester;
+   }
+  </style>
 </head>
 <body>
 <div class="category-wrap">
   <h3>Категории</h3>
   <ul>
     <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Avtor.html">Об авторе</a></li>
-    <li><a href="">Что-то</a></li>
-    <li><a href="">Предложения</a></li>
     <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\CWA.html">Свзязь с автором</a></li>
+    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Update.html">Обновления</a></li>
   </ul>
 </div>
 <div class="header-wrap">
