--- a/Проект/index.html
+++ b/Проект/index.html
@@ -16,9 +16,9 @@
 <div class="category-wrap">
   <h3>Категории</h3>
   <ul>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Avtor.html">Об авторе</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\CWA.html">Свзязь с автором</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Update.html">Обновления</a></li>
+    <li><a href="Avtor.html">Об авторе</a></li>
+    <li><a href="CWA.html">Свзязь с автором</a></li>
+    <li><a href="Update.html">Обновления</a></li>
   </ul>
 </div>
 <div class="header-wrap">
