--- a/Проект/Avtor.html
+++ b/Проект/Avtor.html
@@ -20,9 +20,9 @@
 <div class="category-wrap">
   <h3>Категории</h3>
   <ul>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\index.html">Главная Страница	</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\CWA.html">Свзязь с автором</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Update.html">Обновления</a></li>
+    <li><a href="index.html">Главная Страница	</a></li>
+    <li><a href="CWA.html">Свзязь с автором</a></li>
+    <li><a href="Update.html">Обновления</a></li>
   </ul>
 </div>
 </div>
