--- a/Проект/CWA.html
+++ b/Проект/CWA.html
@@ -20,9 +20,9 @@
 <div class="category-wrap">
   <h3>Категории</h3>
   <ul>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\index.html">Главная Страница</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Avtor.html">Об авторе</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Update.html">Обновления</a></li>
+    <li><a href="index.html">Главная Страница</a></li>
+    <li><a href="Avtor.html">Об авторе</a></li>
+    <li><a href="Update.html">Обновления</a></li>
   </ul>
 </div>
 </div>
