--- a/Проект/Update.html
+++ b/Проект/Update.html
@@ -60,9 +60,9 @@
 <div class="category-wrap">
   <h3>Категории</h3>
   <ul>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\index.html">Главная Страница</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\Avtor.html">Об авторе</a></li>
-    <li><a href="C:\Users\User\Desktop\Новая папка (2)\Проект\CWA.html">Связь с автором</a></li>
+    <li><a href="index.html">Главная Страница</a></li>
+    <li><a href="Avtor.html">Об авторе</a></li>
+    <li><a href="CWA.html">Связь с автором</a></li>
   </ul>
 </div>
 </main>
